[package]
name = "lazy-git-clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
trash = "3.1.2"
inquire = "0.6.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.108", features = [] }
maplit = "1.0.2"
