[package]
name = "lazy-git-clean"
version = "1.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
trash = "3.1.2"
inquire = "0.6.2"
git2 = { version = "0.18.1", features = [] }
colored = "2.1.0"
rayon = "1.8.1"
