[package]
name = "git-sweep"
version = "1.0.0"
edition = "2021"
description = "Simple tool to clean up your disk from unused git repositories"
license = "MIT"
repository = "https://github.com/j-szulc/git-sweep"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
trash = "3.1.2"
inquire = "0.6.2"
git2 = { version = "0.18.1", features = [] }
colored = "2.1.0"
rayon = "1.8.1"
